# dns-hijacking

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  errors.rs  main.rs  network.rs
src/network/: fake_dns.rs
