[package]
name = "dns-hijacking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
tokio = { version = "1.35.0", features = ["full"] }
hickory-proto = "0.24.0"
hickory-server = "0.24.0"
clap = { version = "4.4.11", features = ["derive"]}
chrono = "0.4.31"